# CV_One

./: .gitignore  CMakeLists.txt  db.sqlite3
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: index.html
scripts/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/cpp/: plceholderawy.cpp
